# MED

./: README.md  pyproject.toml
data/: article_data.csv  retail_taxonomy.json  syn_data_test_taxonomy.json  syntetic_data_test_article_taxonomy.json  syntetic_data_test_article_transactions.csv  syntetic_data_test_taxonomy.json  syntetic_data_test_transactions.csv
src/: article_base_test.py  count.py  cumulate.py  data.py  main.py  market_test.py  retail_test.py  runner.py  syntetic_test.py  test_article_base.py
src/generators/: syntetic_data_gen.py  syntetic_data_gen_two.py  taxonomy_gen.py
src/loaders/: loader.py
