[project]
name = "med"
version = "0.1.0"
description = ""
authors = [
    {name = "Filip",email = "fbudzynski56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "numpy (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
