[project]
name = "med"
version = "0.1.0"
description = ""
authors = [
    {name = "Filip",email = "fbudzynski56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pytest (>=8.4.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
